MarcoKitTests/TestData/error/color.marco
--before
#ffffgg

--after
5-6: Color literal expected, got 'g'
